# mcsema

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh
cmake/: FindProtobuf.cmake
cmake/protobuf/: CMakeLists.txt
llvm-3.5/: CMakeLists.txt
mc-sema/: CMakeLists.txt
mc-sema/bin_descend/: CMakeLists.txt
mc-sema/binary_common/: CMakeLists.txt
mc-sema/bitcode_from_cfg/: CMakeLists.txt
mc-sema/cfgToLLVM/: CMakeLists.txt
mc-sema/peToCFG/: CMakeLists.txt  peToCFG.cpp
mc-sema/protobuf-cmake/: protobuf-common.cmake
mc-sema/radare2_cfg/: .gitignore  lift_cfg.py  radare2_cfg.py  test.c
mc-sema/runtime/: CMakeLists.txt
mcsema/: CMakeLists.txt
mcsema-python/: CMakeLists.txt  README.md  __init__.py  bin_descend.cpp  bin_descend.h  bin_descend_py.cpp  cfg_ida.py  cfg_to_llvm.cpp  cfg_to_llvm.h  llvm_lifter.cpp  llvm_lifter.h  mcsemamodule.cpp  setup.py.in  test.cpp
mcsema-python/bin_descend/: ExternalFuncMap.cpp  cfg_recover.cpp
mcsema-python/docs/: cfg_ida.rst  conf.py
mcsema-python/test/: .gitignore  demo_common.py  test.py  test1.bc  test1_opt.bc  test1_opt.ll
mcsema-python/test/cfg/: demo1_test.cfg  demo2_test.cfg  demo5_qual.cfg
mcsema-python/test/demo1/: .gitignore  demo.py  demo1.py  demo_driver  demo_driver.c  demo_driver1
mcsema-python/test/demo2/: demo.py  demo_driver.c  demo_test.c  test.py
mcsema-python/test/demo3/: demo.py  demo_driver.c  demo_test.c  test.py
mcsema-python/test/demo4/: demo.py  demo_driver.c  demo_test.c  test.py
mcsema-python/test/demo5/: .gitignore  demo.py  driver.c  driver_klee.c  password.c  qual_opt_mod.ll
mcsema-python/test/demo6/: .gitignore  demo.py  driver.c  qual
mcsema-python/test/experiment/: demo.py  test.py
mcsema-python/test/input/: test2  test2.c
python/: CMakeLists.txt  cfg_ida.py  cfg_to_llvm.cpp  cfg_to_llvm.h  lift.cpp  lift.h  lifter.cpp  lifter.h  mcsema_init.cpp  mcsema_init.h  mcsemamodule.cpp
python/docs/: .gitignore  Makefile  index.rst
python/test/: .gitignore  demo_common.py
python/test/cfg/: demo3_test.cfg  demo4_test.cfg
python/test/demo1/: .gitignore  demo.py  demo_driver.c  demo_test.asm
python/test/demo2/: demo.py
python/test/demo3/: .gitignore  demo.py  demo_test.c
python/test/demo4/: demo.py
python/test/demo5/: demo.py  driver.c  qual_opt_mod.ll
tests/: radare2_test.py
tools/mcsema_disass/radare2/: get_cfg.py
